--- a/ejercicios/solucionejer3.html
+++ b/ejercicios/solucionejer3.html
@@ -26,6 +26,9 @@
 }
   </style>
 </head>
+<header>
+  <title>Ejer 3</title>
+</header>
 <body>
   
     <h1 class="title">HTML5 Video Video y subtitulos</a> Example</h1>
@@ -33,7 +36,7 @@
   <section>
     <video width="600" height="400" controls>
       <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/friday.mp4" type="video/mp4">
-     <!-- <track label="pt" kind="subtitles" srclang="pt" src="./subtitles/friday.vtt" default />-->
+     <track label="pt" kind="subtitles" srclang="pt" src="./subtitles/friday.vtt" default />
     </video>
   </section>
 </body>
